<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >
    <TextView
        android:id="@+id/header_title_txt"
        style="@style/Widget.Material3.MaterialTimePicker.Display.HelperText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="15dp"
        android:background="#8BC34A"
        android:fontFamily="monospace"
        android:padding="5dp"
        android:text="EcoRecicla"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/header_numFactura_txt"
        style="@style/Widget.Material3.MaterialTimePicker.Display.HelperText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_title_txt"
        android:layout_marginTop="30dp"
        android:background="#8BC34A"
        android:fontFamily="monospace"
        android:padding="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/header_numFactura_Dinamico"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_margin="10dp"
        android:layout_below="@id/header_numFactura_txt"
        >
       <!-- Table Heading -->
        <TableRow
            android:background="@color/colorPrimaryDark"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:padding="10dp"
                android:text="@string/tablaFactura_Col1_header"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textAlignment="center"
                android:textStyle="bold" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/tablaFactura_Col2_header"
                android:textColor="@color/white"
                android:padding="10dp"
                android:layout_weight="4"
                android:textSize="12sp"
                android:textAlignment="center"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/tablaFactura_Col3_header"
                android:textColor="@color/white"
                android:padding="10dp"
                android:layout_weight="3"
                android:textSize="12sp"
                android:textAlignment="center"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:padding="10dp"
                android:text="@string/tablaFactura_Col4_header"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/tablaFactura_Col5_header"
                android:textColor="@color/white"
                android:padding="10dp"
                android:layout_weight="3"
                android:textSize="12sp"
                android:textAlignment="center"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/tablaFactura_Col6_header"
                android:textColor="@color/white"
                android:padding="10dp"
                android:layout_weight="5"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold"
                />




        </TableRow>

    </TableLayout>

</RelativeLayout>